// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";
package openpitrix;

// set go package name to pb
option go_package = "pb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";


message CreateAppRequest {
	google.protobuf.StringValue _ = 1; // placeholder for app_id
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue repo_id = 3;
	google.protobuf.StringValue owner = 4;
	google.protobuf.StringValue chart_name = 5;
	google.protobuf.StringValue description = 6;
	google.protobuf.StringValue home = 8;
	google.protobuf.StringValue icon = 9;
	google.protobuf.StringValue screenshots = 10;
	google.protobuf.StringValue maintainers = 11;
	google.protobuf.StringValue sources = 12;
	google.protobuf.StringValue readme = 13;
}

message CreateAppResponse {
	App app = 1;
}

message ModifyAppRequest {
	google.protobuf.StringValue app_id = 1;
	google.protobuf.StringValue name = 2; // TODO: using google.protobuf.StringValue to handle nil param
	google.protobuf.StringValue repo_id = 3;
	google.protobuf.StringValue owner = 4;
	google.protobuf.StringValue chart_name = 5;
	google.protobuf.StringValue description = 6;
	google.protobuf.StringValue home = 8;
	google.protobuf.StringValue icon = 9;
	google.protobuf.StringValue screenshots = 10;
	google.protobuf.StringValue maintainers = 11;
	google.protobuf.StringValue sources = 12;
	google.protobuf.StringValue readme = 13;
}

message ModifyAppResponse {
	App app = 1;
}

message DeleteAppRequest {
	google.protobuf.StringValue app_id = 1;
}

message DeleteAppResponse {
	App app = 1;
}

message App {
	google.protobuf.StringValue app_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue repo_id = 3;
	google.protobuf.StringValue description = 4;
	google.protobuf.StringValue status = 5;
	google.protobuf.StringValue home = 6;
	google.protobuf.StringValue icon = 7;
	google.protobuf.StringValue screenshots = 8;
	google.protobuf.StringValue maintainers = 9;
	google.protobuf.StringValue sources = 10;
	google.protobuf.StringValue readme = 11;
	google.protobuf.StringValue chart_name = 12;
	google.protobuf.StringValue owner = 13;
	google.protobuf.Timestamp create_time = 14;
	google.protobuf.Timestamp status_time = 15;
	google.protobuf.Timestamp update_time = 16;
}
message DescribeAppsRequest {
	repeated string app_id = 1; // NOTE: grpc gateway cannot handle repeated StringValue
	repeated string name = 2;
	repeated string repo_id = 3;
	repeated string status = 4;
	repeated string owner = 5;
	repeated string chart_name = 6;
	google.protobuf.StringValue search_word = 7;
	uint32 limit = 8; // NOTE: uint64 marshal to json will convert to string
	uint32 offset = 9;
}
message DescribeAppsResponse {
	uint32 total_count = 1;
	repeated App app_set = 2;
}

message CreateAppVersionRequest {
	google.protobuf.StringValue _ = 1; // placeholder for version_id
	google.protobuf.StringValue app_id = 2;
	google.protobuf.StringValue owner = 3;
	google.protobuf.StringValue name = 4;
	google.protobuf.StringValue package_name = 5;
	google.protobuf.StringValue description = 6;
}

message CreateAppVersionResponse {
	AppVersion app_version = 1;
}

message ModifyAppVersionRequest {
	google.protobuf.StringValue version_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue package_name = 3;
	google.protobuf.StringValue owner = 4;
	google.protobuf.StringValue description = 5;
}

message ModifyAppVersionResponse {
	AppVersion app_version = 1;
}

message DeleteAppVersionRequest {
	google.protobuf.StringValue version_id = 1;
}

message DeleteAppVersionResponse {
	AppVersion app_version = 1;
}

message AppVersion {
	google.protobuf.StringValue version_id = 1;
	google.protobuf.StringValue app_id = 2;
	google.protobuf.StringValue owner = 3;
	google.protobuf.StringValue name = 4;
	google.protobuf.StringValue description = 5;
	google.protobuf.StringValue package_name = 6;
	google.protobuf.StringValue status = 7;
	google.protobuf.Timestamp create_time = 8;
	google.protobuf.Timestamp status_time = 9;
	google.protobuf.Timestamp update_time = 10;
}
message DescribeAppVersionsRequest {
	repeated string version_id = 1;
	repeated string app_id = 2;
	repeated string name = 3;
	repeated string owner = 4;
	repeated string description = 5;
	repeated string package_name = 6;
	repeated string status = 7;
	google.protobuf.StringValue search_word = 8;
	uint32 limit = 9; // NOTE: uint64 marshal to json will convert to string
	uint32 offset = 10;
}
message DescribeAppVersionsResponse {
	uint32 total_count = 1;
	repeated AppVersion app_version_set = 2;
}

message GetAppVersionPackageRequest {
	google.protobuf.StringValue version_id = 1;
}
message GetAppVersionPackageResponse {
	bytes package = 1;
}

service AppManager {
	rpc CreateApp (CreateAppRequest) returns (CreateAppResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create app"
		};
		option (google.api.http) = {
			post: "/v1/apps"
			body: "*"
		};
	}
	rpc DescribeApps (DescribeAppsRequest) returns (DescribeAppsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe apps with filter"
		};
		option (google.api.http) = {
			get: "/v1/apps"
		};
	}
	rpc ModifyApp (ModifyAppRequest) returns (ModifyAppResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "modify app"
		};
		option (google.api.http) = {
			patch: "/v1/apps"
			body: "*"
		};
	}
	rpc DeleteApp (DeleteAppRequest) returns (DeleteAppResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "delete app"
		};
		option (google.api.http) = {
			delete: "/v1/apps"
			body: "*"
		};
	}

	rpc CreateAppVersion (CreateAppVersionRequest) returns (CreateAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "create app version"
        };
		option (google.api.http) = {
            post: "/v1/app_versions"
            body: "*"
        };
	}
	rpc DescribeAppVersions (DescribeAppVersionsRequest) returns (DescribeAppVersionsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "describe app versions with filter"
        };
		option (google.api.http) = {
            get: "/v1/app_versions"
        };
	}
	rpc ModifyAppVersion (ModifyAppVersionRequest) returns (ModifyAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "modify app version"
        };
		option (google.api.http) = {
            patch: "/v1/app_versions"
            body: "*"
        };
	}
	rpc DeleteAppVersion (DeleteAppVersionRequest) returns (DeleteAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "delete app version"
        };
		option (google.api.http) = {
            delete: "/v1/app_versions"
            body: "*"
        };
	}
	rpc GetAppVersionPackage (GetAppVersionPackageRequest) returns (GetAppVersionPackageResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "get the package content of app version"
        };
		option (google.api.http) = {
            get: "/v1/app_version/package"
        };
	}
}
